--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
     <td><%= product.description %></td>
     <td><%= product.price %></td>
     <td>
-      <%= link_to 'Detalle' %>
+      <%= link_to 'Detalle', product_path(product) %>
       <%= link_to 'Editar' %>
       <%= link_to 'Borrar' %>
     </td>
