--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,7 +14,7 @@
     <td><%= product.price %></td>
     <td>
       <%= link_to 'Detalle', product_path(product) %>
-      <%= link_to 'Editar' %>
+      <%= link_to 'Editar', edit_product_path(product) %>
       <%= link_to 'Borrar' %>
     </td>
   <tr>
