--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,6 +20,7 @@
   <tr>
     <% end %>
   <tr>
-    <td><%= link_to 'Crear Producto' %></td>
+  <br>
+    <td><%= link_to 'Crear Producto', new_product_path(@product) %></td>
   </tr>
 </table>
