--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Editando Producto </h1>
+<h1>Creando Producto </h1>
 <%= simple_form_for @product do |f| %>
   <%= f.input :name, label: 'Nombre Producto' %>
   <%= f.input :description, label: 'Descripción' %>
