--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
     <td>
       <%= link_to 'Detalle', product_path(product) %>
       <%= link_to 'Editar', edit_product_path(product) %>
-      <%= link_to 'Borrar' %>
+      <%= link_to 'Borrar', product, method: :delete, data: { confirm: 'Estas seguro de borrarlo?' } %>
     </td>
   <tr>
     <% end %>
