--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,2 @@
 <h1>Creando Producto </h1>
-<%= simple_form_for @product do |f| %>
-  <%= f.input :name, label: 'Nombre Producto' %>
-  <%= f.input :description, label: 'Descripción' %>
-  <%= f.input :price, label: 'Precio' %>
-  <%= f.submit 'Guardar'%>
-<% end %>
+<%= render 'form' %>
